package enumclasses;

public enum ChipFlavor {
    //Hard set data types and list of chips that are going to be in the shop
    BBQ,
    SOUR_CREAM_AND_ONION,
    HONEY_BUTTER,
    CLASSIC,
    SALT_AND_VINEGAR
}
