package enumclasses;

public enum RegularToppings {
    LETTUCE,
    PEPPERS,
    ONIONS,
    TOMATOES,
    JALEPENOS,
    CUCUMBERS,
    PICKLES,
    GUACAMOLE,
    MUSHROOMS
}
