@startuml
enum EnumClasses.RegularToppings {
+  LETTUCE
+  PEPPERS
+  ONIONS
+  TOMATOES
+  JALEPENOS
+  CUCUMBERS
+  PICKLES
+  GUACAMOLE
+  MUSHROOMS
}

class SuperUberSnackShack.Drink {
~ DrinkSize size
~ DrinkFlavor flavor
+ DrinkFlavor getFlavor()
+ DrinkSize getSize()
+ void setSize(DrinkSize)
+ void setFlavor(DrinkFlavor)
+ double getDrinkPrice()
+ double getPrice()
+ String printToReceipt()
+ String toString()
}


class ReceiptKeeper.PrintReceipt {
+ {static} void makeReceipt(Orders)
}

enum EnumClasses.BreadType {
+  WHEAT
+  WHITE
+  RYE
+  WRAP
}

class SuperUberSnackShack.Sandwich {
- BreadLength breadLength
- BreadType breadType
- Cheese.CheeseType cheeses
- Meat.Meats bigMeats
- RegularToppings toppingList
- SauceFlavor sauceFlavor
- SideType sideType
- boolean toastedSandwich
- boolean haveExtraToppings
+ BreadLength getBreadLength()
+ void setBreadLength(BreadLength)
+ BreadType getBreadType()
+ void setBreadType(BreadType)
+ Cheese.CheeseType getCheeses()
+ void setCheeses(Cheese.CheeseType)
+ Meat.Meats getBigMeats()
+ void setBigMeats(Meat.Meats)
+ RegularToppings getToppingList()
+ boolean isHaveExtraToppings()
+ void setToppingList(RegularToppings)
+ SauceFlavor getSauceFlavor()
+ void setSauceFlavor(SauceFlavor)
+ SideType getSideType()
+ void setSideType(SideType)
+ boolean isToastedSandwich()
+ void setToastedSandwich(boolean)
+ void setHaveExtraToppings(boolean)
+ double getPrice()
+ double getSandwichSizePrice()
+ double getCheesePrice()
+ double getMeatPrice()
+ String printToReceipt()
+ String toString()
}


class SuperUberSnackShack.Cheese {
- Cheese cheeseWanted
+ String toString()
+ String printToReceipt()
}


enum SuperUberSnackShack.CheeseType {
+  AMERICAN
+  PROVOLONE
+  CHEDDAR
+  SWISS
}

enum EnumClasses.BreadLength {
+  FOUR_INCHES
+  EIGHT_INCHES
+  TWELVE_INCHES
- String breadLength
- double price
+ double getPrice()
+ String getBreadLength()
}


abstract class SuperUberSnackShack.Items {
~ double price
+ double getPrice()
+ {abstract}String printToReceipt()
}


enum EnumClasses.DrinkSize {
+  SMALL
+  MEDIUM
+  LARGE
- double price
+ double getPrice()
}


enum EnumClasses.SideType {
+  SALT
+  PEPPER
+  PEPPER_FLAKES
}

class SuperUberSnackShack.Orders {
- {static} double totalOrderPrice
- {static} List<Items> itemList
+ void addOrderItem(Items)
+ double getTotalOrderPrice()
+ List<Items> getItemList()
+ {static} double totalPriceOfOrder()
}


class SuperUberSnackShack.UserInterface.SandwichApplication {
- Scanner user
~ Orders orders
+ void customerOrderScreen()
+ void createOrderMenu()
+ void customerOrderSummary()
+ void checkOutMenu(Orders)
+ void sandwichMakerMenu()
+ void breadPicker(Sandwich)
+ void pickTheCheese(Sandwich)
+ void wantsExtraCheese(Sandwich)
+ void meatPickerMenu(Sandwich)
+ void wantsExtraMeat(Sandwich)
+ void regularToppings(Sandwich)
+ void wantsExtraToppings(Sandwich)
+ void wantsSandwichToasted(Sandwich)
+ void sauceMenu(Sandwich)
+ void sideMenu(Sandwich)
+ void drinkMakerMenu()
+ void drinkFlavorPicker(Drink)
+ void chipMakerMenu()
}


enum EnumClasses.SauceFlavor {
+  KRABBY_PATTY_FORMULA
+  AU_JUS
+  WORLDS_SPICIEST_HOT_SAUCE
+  MAYO
+  MUSTARD
+  KETCHUP
+  RANCH
+  THOUSAND_ISLAND
+  VINAIGRETTE
}

class SuperUberSnackShack.Meat {
- Meat meatWanted
+ String toString()
}


enum SuperUberSnackShack.Meats {
+  STEAK
+  HAM
+  SALAMI
+  ROAST_BEEF
+  CHICKEN
+  BACON
}

enum EnumClasses.DrinkFlavor {
+  HI_C
+  ROOT_BEER
+  RIG_JUICE
+  BUTTER_BEER
+  HEAL_POTION
- int menuOption
+ int getMenuOption()
}


class InitializeProgram.RunSandwichShop {
+ {static} void main(String[])
}

enum EnumClasses.ChipFlavor {
+  BBQ
+  SOUR_CREAM_AND_ONION
+  HONEY_BUTTER
+  CLASSIC
+  SALT_AND_VINEGAR
}

abstract class SuperUberSnackShack.PremiumToppings {
+ double price
}

interface Interfaces.Price {
~ double getPrice()
}

class SuperUberSnackShack.Chips {
- ChipFlavor chipName
- double PRICE
+ ChipFlavor getChipName()
+ void setChipName(ChipFlavor)
+ double getPrice()
+ String printToReceipt()
+ String toString()
}


class SuperUberSnackShack.Topping {
~ BreadLength breadLength
~ boolean haveExtraToppings
+ double getPrice()
+ String printToReceipt()
}




SuperUberSnackShack.Items <|-- SuperUberSnackShack.Drink
SuperUberSnackShack.Items <|-- SuperUberSnackShack.Sandwich
SuperUberSnackShack.PremiumToppings <|-- SuperUberSnackShack.Cheese
Interfaces.Price <|.. SuperUberSnackShack.Items
SuperUberSnackShack.PremiumToppings <|-- SuperUberSnackShack.Meat
SuperUberSnackShack.Topping <|-- SuperUberSnackShack.PremiumToppings
SuperUberSnackShack.Items <|-- SuperUberSnackShack.Chips
SuperUberSnackShack.Items <|-- SuperUberSnackShack.Topping
@enduml